# fukuoka-C19

./: Cargo.toml  README.md  flake.nix
src/: csv.rs  main.rs
