[package]
name = "fukuoka_c19"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
dioxus = { version = "0.2", features = ["desktop"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "0.5"
regex = "1.5"
tokio = { version = "1", features = ["full", "tracing"] }

# [profile.release]
# strip = true